# OVID

./: .env.example  .env.production.example  .gitignore  404.html  CALIBER_LEARNINGS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fix_test.py  fix_test2.py  index.html  mkdocs.yml  nginx-oviddb-vhosts.conf  sitemap.xml  test_script.py  uat_results.json  verify_t11.py
.caliber/: error-log.md  score-history.jsonl
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
OVID-product-spec/: index.html
OVID-technical-spec/: index.html
api/: .dockerignore  alembic.ini  main.py  pytest.ini  requirements.txt
api-reference/: index.html
arm/: entrypoint_wrapper.sh  identify.py  identify_ovid.py  start_arm_container.sh
arm-integration/: index.html
auth-setup/: index.html
cli-reference/: index.html
contributing/: index.html
deployment/: index.html
docker-quickstart/: index.html
docs/: OVID-product-spec.md  OVID-technical-spec.md  api-reference.md  arm-integration.md  auth-setup.md  cli-reference.md  contributing.md  deployment.md  disc-metadata-enrichment-research.md  docker-quickstart.md  fingerprint-spec.md  getting-started-dev.md  index.md  mvp-beta-definition.md  nginx-oviddb-vhosts.conf  privacy.md  self-hosting.md  soft-launch-verification.md
ovid-client/: README.md  pyproject.toml
ovid-client/src/ovid/: __init__.py  bd2_spec.py  bd_disc.py  bd_fingerprint.py  bdmt_parser.py  cli.py  client.py  disc.py  disc_identity.py  disc_structure.py  dvdread_adapter.py  fingerprint.py  ifo_parser.py  mpls_parser.py  submission.py  tmdb.py
ovid-client/src/ovid/readers/: __init__.py  base.py  bd_folder.py  drive.py  folder.py  iso.py
ovid-client/src/ovid_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ovid-client/tests/: conftest.py  conftest_bd.py  test_bd_disc.py  test_bd_fingerprint.py  test_bd_fingerprint_pinned.py  test_bd_identity.py  test_bd_real_disc.py  test_bdmt_parser.py  test_cli_lookup.py  test_cli_submit.py  test_client.py  test_client_sets.py  test_disc.py  test_disc_identity.py  test_disc_structure.py  test_dvdread_adapter.py  test_fingerprint.py  test_fixtures.py  test_ifo_parser.py  test_mpls_parser.py  test_readers.py  test_real_disc.py  test_submission.py  test_tmdb.py
(+373 files in other folders)
