[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovid-client"
version = "0.1.0"
description = "OVID disc fingerprinting client — generates stable identifiers for DVD and Blu-ray discs"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "OVID Contributors" },
]
keywords = ["disc", "fingerprint", "bluray", "dvd", "identification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pycdlib>=1.14",
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "tmdbv3api>=1.9",
]

[project.urls]
Homepage = "https://github.com/The-Artificer-of-Ciphers-LLC/OVID"
Repository = "https://github.com/The-Artificer-of-Ciphers-LLC/OVID"
"Bug Tracker" = "https://github.com/The-Artificer-of-Ciphers-LLC/OVID/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ovid = "ovid.cli:main"

[tool.pytest.ini_options]
markers = [
    "real_disc: tests that require a real DVD disc path via OVID_TEST_DISC_PATH env var",
]

[tool.setuptools.packages.find]
where = ["src"]
